--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
             <ul class="lista">
                 <li class="item"><strong>7</strong>Blusinha</li>
                 <li class="item"><strong>1</strong>Calça</li>
-                <li class="item"><strong>3</strong>Casaco</li>
                 <li class="item"><strong>3</strong>Meia</li>
-                <li class="item"><strong>10</strong>Calcinha</li>
                 <li class="item"><strong>2</strong>Tênis</li>
                 <li class="item"><strong>1</strong>Celular</li>
-                <li class="item"><strong>1</strong>Carregador</li>
-                <li class="item"><strong>1</strong>Adaptador de tomada</li>
             </ul>
         </main>
+        <script src="JS/main.js"></script>
     </body>
 </html>
