--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </form>
             </div>
 
-            <ul class="lista">
+            <ul class="lista" id="lista">
                 <li class="item"><strong>7</strong>Blusinha</li>
                 <li class="item"><strong>1</strong>Calça</li>
                 <li class="item"><strong>3</strong>Meia</li>
