Tentando armazenar dados no localStorage

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
                 <li class="item"><strong>1</strong>Celular</li>
             </ul>
         </main>
-        <script src="JS/main.js"></script>
+        <script src="./JS/main.js"></script>
     </body>
 </html>
