--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
                 </form>
             </div>
 
-            <ul class="lista" id="lista">
-                <li class="item"><strong>7</strong>Blusinha</li>
-                <li class="item"><strong>1</strong>Calça</li>
-                <li class="item"><strong>3</strong>Meia</li>
-                <li class="item"><strong>2</strong>Tênis</li>
-                <li class="item"><strong>1</strong>Celular</li>
-            </ul>
+            <ul class="lista" id="lista"></ul>
         </main>
         <script src="./JS/main.js"></script>
     </body>
